transformer -> compiler, propagate more args